--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
       <div class="card-header animated-bg" id="header">
         <img
-          src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80"
+          src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
           alt=""
         />
       </div>
@@ -27,13 +27,15 @@
       </p>
       <div class="author">
         <div class="profile-img animated-bg" id="profile_img">
-          <img src="https://randomuser.me/api/portraits/men/45/.jpg" alt="" />
+          <img src="https://randomuser.me/api/portraits/men/68.jpg" alt="" />
         </div>
         <div class="author-info">
           <strong class="animated-bg animated-bg-text" id="name"
             >John Doe</strong
           >
-		  <small class="animated-bg animated-bg-text" id="date">Mar 19, 2022</small>
+          <small class="animated-bg animated-bg-text" id="date"
+            >Mar 19, 2022</small
+          >
         </div>
       </div>
     </div>
