--- a/index.html
+++ b/index.html
@@ -15,27 +15,29 @@
           alt=""
         />
       </div>
-      <h3 class="card-title animated-bg animated-bg-text" #id="title">
-        Lorem ipsum dolor sit amet
-      </h3>
-      <p class="card-excerpt" id="excerpt">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum,
-        veritatis.
-        <span class="animated-bg animated-bg-text">&nbsp;</span>
-        <span class="animated-bg animated-bg-text">&nbsp;</span>
-        <span class="animated-bg animated-bg-text">&nbsp;</span>
-      </p>
-      <div class="author">
-        <div class="profile-img animated-bg" id="profile_img">
-          <img src="https://randomuser.me/api/portraits/men/68.jpg" alt="" />
-        </div>
-        <div class="author-info">
-          <strong class="animated-bg animated-bg-text" id="name"
-            >John Doe</strong
-          >
-          <small class="animated-bg animated-bg-text" id="date"
-            >Mar 19, 2022</small
-          >
+      <div class="card-content">
+        <h3 class="card-title animated-bg animated-bg-text" #id="title">
+          Lorem ipsum dolor sit amet
+        </h3>
+        <p class="card-excerpt" id="excerpt">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum,
+          veritatis.
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+        </p>
+        <div class="author">
+          <div class="profile-img animated-bg" id="profile_img">
+            <img src="https://randomuser.me/api/portraits/men/68.jpg" alt="" />
+          </div>
+          <div class="author-info">
+            <strong class="animated-bg animated-bg-text" id="name"
+              >John Doe</strong
+            >
+            <small class="animated-bg animated-bg-text" id="date"
+              >Mar 19, 2022</small
+            >
+          </div>
         </div>
       </div>
     </div>
