--- a/index.html
+++ b/index.html
@@ -9,33 +9,27 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header animated-bg" id="header">
-        <img
-          src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-          alt=""
-        />
-      </div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
       <div class="card-content">
-        <h3 class="card-title animated-bg animated-bg-text" #id="title">
-          Lorem ipsum dolor sit amet
+        <h3 class="card-title animated-bg animated-bg-text" id="title">
+          &nbsp;
         </h3>
         <p class="card-excerpt" id="excerpt">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum,
-          veritatis.
+          &nbsp;
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
         </p>
         <div class="author">
           <div class="profile-img animated-bg" id="profile_img">
-            <img src="https://randomuser.me/api/portraits/men/68.jpg" alt="" />
+            &nbsp;
           </div>
           <div class="author-info">
             <strong class="animated-bg animated-bg-text" id="name"
-              >John Doe</strong
+              >&nbsp;</strong
             >
             <small class="animated-bg animated-bg-text" id="date"
-              >Mar 19, 2022</small
+              >&nbsp;</small
             >
           </div>
         </div>
